Fixed the sizing issue of the grid by setting flex-grow to 1 and made some borders invisible to avoid bulky edges

--- a/styles.css
+++ b/styles.css
@@ -19,19 +19,24 @@
     border-style: solid;
     width: 300px;
     height: 300px;
-    margin: 0px;
-    justify-content: space-between;
-
-    
 }
 
 .row {
     border-style: solid;
     display: flex;
     padding: 0px;
+    flex-grow: 1;
+    border-width: thin;
+    border-left-width: 0px;
+    border-right-width: 0px;
 }
 
 .box {
     border-style: solid;
     margin: 0px;
+    flex-grow: 1;
+    border-width: thin;
+    border-bottom-width: 0px;
+    border-top-width: 0px;
+    
 }
